--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Sync Test</title>
 </head>
 <body>
-    <h1>-Service Worker Sync Test-</h1>
+    <h1>-*Service Worker Sync Test*-</h1>
     <button id="button">sync</button>
     <script src="./script/main.js"></script>
 </body>
