--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>--Service Worker Sync Test--</h1>
+    <h3>FireFoxでは「registration.sync is undefined」となる</h3>
     <button id="button">sync</button>
     <script src="./script/main.js"></script>
 </body>
