--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sync Test</title>
+    <link rel="manifest" href="./manifest.json">
 </head>
 <body>
     <h1>--Service Worker Sync Test--</h1>
