--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>--Service Worker Sync Test--</h1>
     <h3>FireFoxでは「registration.sync is undefined」となる</h3>
-    <button id="button">sync[indexDB登録]</button><br><br><br>
-    <button id="retrieve">sync[indexDBデータ取得]</button>
+    <button id="button">sync[indexedDB登録]</button><br><br><br>
+    <button id="retrieve">sync[indexedDBデータ取得]</button>
     <div class="res"></div>
     <script src="./script/main.js"></script>
 </body>
